[gd_scene load_steps=5 format=3 uid="uid://p0natmd8tvxl"]

[ext_resource type="Script" path="res://Scripts/Player/player_bullet.gd" id="1_jf7v0"]
[ext_resource type="Texture2D" uid="uid://bu8fgxksw3duk" path="res://Assets/turretBase_small.png" id="2_lsb28"]
[ext_resource type="AudioStream" uid="uid://06uc3r68lrhq" path="res://Assets/Sounds/Retro Impact Punch 07.wav" id="3_lsb28"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xbwfy"]
radius = 13.0

[node name="Player_bullet" type="Area2D"]
scale = Vector2(0.25, 0.25)
collision_layer = 0
collision_mask = 34
script = ExtResource("1_jf7v0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lsb28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xbwfy")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lsb28")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
